# PhotoFaceSwap

./: .clang-format  .gitignore  CMakeLists.txt  README.md  build.bat  build.sh  configure.sh  imgui.ini
PhotoFaceSwap/: ;  CMakeLists.txt  CliMain.cpp  GuiMain.cpp  main.cpp
PhotoFaceSwap/gui/: CameraGui.cpp  CameraGui.hpp  FaceSwapGui.cpp  FaceSwapGui.hpp  GuiLogger.cpp  GuiLogger.hpp  Image.cpp  Image.hpp
PhotoFaceSwap/include/: ArgumentParse.hpp  Calculate.hpp  ImagePoints.hpp  Logger.hpp  PhotoFaceSwap.hpp
PhotoFaceSwap/src/: Calculate.cpp  Cli.cpp  Gui.cpp  ImagePoints.cpp  ImageProcess.cpp  Logger.cpp
cmake/: pch.h.in  utils.cmake
